--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ h5 {
 #content {
 	background:#f5f5f5;
     padding: 50px 0 0 0;
-	text-shadow:1px 1px #fff;
+	/*text-shadow:1px 1px #fff;*/
 }
 
 #features {
