--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@
 	width:100%;
 	height:58px;
 	text-indent:-999em;
-	background:url(../images/logo.png) no-repeat left top;
 }
 
 
@@ -111,7 +110,6 @@
 	z-index: 101;
 	margin: 0px 4px 0px 0px;
 	float: left;
-	background: url(../images/menu-divider.png) no-repeat right 31px;
 }
 #access .menu ul li.last {
 	background: none;
@@ -278,7 +276,6 @@
 	height: 332px;
 	padding-left: 30%;
 	padding-top: 28px;
-	background: url(../images/new-website-pic.png) no-repeat left top;
 }
 .new_website strong {
 	font-size: 14px;
@@ -1478,7 +1475,6 @@ ul.post_meta_links_small {
 	padding-top: 7px;
 	color: #fff;
 	text-decoration: none;
-	background: url(../images/skin01/but_post_readmore.jpg) no-repeat left top;
 }
 .post_readmore:hover {
 	float: right;
@@ -1488,7 +1484,6 @@ ul.post_meta_links_small {
 	padding-top: 7px;
 	color: #fff;
 	text-decoration: none;
-	background: url(../images/skin01/but_post_readmore_hover.jpg) no-repeat left top;
 }
 .sharepost {
 	float: left;
@@ -1572,7 +1567,6 @@ ul.post_meta_links_small {
 .comment_form {
 	float: left;
 	width: 100%;
-	margin-top: 30px;
 }
 .comment_form label{
 	float: left;
@@ -1688,7 +1682,6 @@ ul.post_meta_links_small {
 .comment_form {
 	float: left;
 	width: 690px;
-	margin-top: 30px;
 }
 .blocklabel {
 	float: left;
@@ -1865,7 +1858,7 @@ ul.post_meta_links_small {
 .fresh_projects {
 	float: left;
 	width: 100%;
-	background: #f0f0f0 url(../images/elements/light_honeycomb.png) repeat left top;
+	background: #f0f0f0;
 	text-align: center;
 	-webkit-box-shadow: inset 0px 2px 2px 0px rgba(0, 0, 0, 0.1), 0px 4px 0px 0px #FFF;
   	-moz-box-shadow: inset 0px 2px 2px 0px rgba(0, 0, 0, 0.1), 0px 4px 0px 0px #FFF;
@@ -4201,3 +4194,10 @@ a.knowmore_but:hover {
 	z-index: 999;
 }
 
+
+/* ESTILOS */
+.post_info_content p{
+    margin: 10px 0;
+    font-size: 16px;
+    line-height: 26px;
+}
