--- a/css/reset.css
+++ b/css/reset.css
@@ -107,7 +107,7 @@ h6 {
 
 /* Text elements */
 p {
-	font: 13px 'Open Sans', sans-serif;
+	font: 14px 'Open Sans', sans-serif;
 	font-weight: normal;
 	line-height: 22px;
 }
@@ -380,12 +380,12 @@ height: 0;
 	border-bottom: 1px solid #f0f0f0;
 }
 .divider_line3 {
-	float: left;
-	width: 100%;
-	height: 18px;
-	padding: 0px;
-	margin: 32px 0px 50px 0px;
-	border-bottom: 1px solid #f0f0f0;
+    float: left;
+    width: 100%;
+    height: 25px;
+    padding: 0px;
+    margin: 0 0px 25px 0px;
+    border-bottom: 1px solid #f0f0f0;
 }
 .divider_line4 {
 	float: left;
