--- a/js/sticky-menu/core.css
+++ b/js/sticky-menu/core.css
@@ -1,6 +1,6 @@
 
 .wrapper,#page{zoom:1;width:1240px;margin:0 auto}.wrapper:after,#page:after,.wrapper:before,#page:before{content:"\0020";display:table;height:0;overflow:hidden}.wrapper:after,#page:after{clear:both}*::selection{color:#fafafa;background:#6ea74b}*::-khtml-selection{color:#fafafa;background:#6ea74b}*::-webkit-selection{color:#fafafa;background:#6ea74b}*::-moz-selection{color:#fafafa;background:#6ea74b}*::-ms-selection{color:#fafafa;background:#6ea74b}*::-o-selection{color:#fafafa;background:#6ea74b}
-#header{margin:32px 0px 0px 0px; position: fixed; width: 1240px; z-index: 9999;}
+#header{margin:32px 0px 0px 0px; position: fixed; width: 100%; z-index: 9999;}
 #trueHeader{z-index:9999;left:0;right:0;padding:0px 0px 10px 0;box-shadow:0 4px 3px rgba(0,0,0,0.1);-khtml-box-shadow:0 4px 3px rgba(0,0,0,0.1);-webkit-box-shadow:0 4px 3px rgba(0,0,0,0.1);-moz-box-shadow:0 4px 3px rgba(0,0,0,0.1);-ms-box-shadow:0 4px 3px rgba(0,0,0,0.1);-o-box-shadow:0 4px 3px rgba(0,0,0,0.1);zoom:1}
 
 #header.sticky #trueHeader{position:fixed;top:0}#header.sticky.condensed #trueHeader{padding:0px 0}#header.sticky.condensed #trueHeader #logo{height:57px; background-position: left 0px;}
