--- a/css/reset.css
+++ b/css/reset.css
@@ -23,7 +23,7 @@ body {
 	padding: 0px;
 	margin: 0px;
 	line-height: 1;
-	background: url(../images/elements/bg.png) repeat left top;
+	/*background: url(../images/elements/bg.png) repeat left top;*/
 }
 
 body, input, textarea {
