--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,9 @@
     float:left;
     display:block;
     width:100%;
-    height:40px;
+    height:60px;
     text-indent:-999em;
+    background:url(../imagenes/logo.png) no-repeat center top;
 }
 
 /*------------------*/
@@ -3456,7 +3457,6 @@ ul.list_empty {
 .pricing-tables-two .cont-list {
 	float: left;
 	width: 100%;
-	padding: 15px 0;
 	border-top: 3px solid #fff;
 	border-bottom: 3px solid #fff;
 	background-color: #f9f9f9;
@@ -3469,10 +3469,12 @@ ul.list_empty {
 }
 .pricing-tables-two .cont-list li {
 	margin: 0;
-	padding: 0;
+	padding: 15px 0;
 	list-style-type: none;
 	line-height: 30px;
 	border-bottom: 1px solid #fff;
+    font-size: 16px;
+    font-weight: bold;
 }
 .pricing-tables-two .cont-list li.last {
 	border: none;
@@ -3531,12 +3533,12 @@ ul.list_empty {
 .pricing-tables-helight-two .cont-list {
 	float: left;
 	width: 100%;
-	padding: 15px 0;
 	border-top: 3px solid #fff;
 	border-bottom: 3px solid #fff;
 	background-color: #f9f9f9;
 	text-align: center;
 	color: #727272;
+
 }
 .pricing-tables-helight-two .cont-list ul {
 	margin: 0;
@@ -3544,10 +3546,12 @@ ul.list_empty {
 }
 .pricing-tables-helight-two .cont-list li {
 	margin: 0;
-	padding: 0;
+	padding: 15px 0;
 	list-style-type: none;
 	line-height: 30px;
 	border-bottom: 1px solid #fff;
+    font-size: 16px;
+    font-weight: bold;
 }
 .pricing-tables-helight-two .cont-list li.last {
 	border: none;
@@ -3859,8 +3863,17 @@ a.knowmore_but:hover {
 	color: #727272;
 }
 .top_section li i {
-	color: #d3d3d3;
+	font-size: 20px;
 }
+
+.top_section li i.fa-facebook{
+    color: #3B5998;
+}
+
+.top_section li i.fa-twitter{
+    color: #4099FF;
+}
+
 .top_section li i:hover {
 	color: #999;
 }
